syntax = "proto3";

package order;

option go_package = "order-service/pkg/proto/order";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
  rpc UpdateOrder (UpdateOrderRequest) returns (UpdateOrderResponse);
}

message OrderItem {
  int64 product_id = 1;
  int64 quantity = 2;
  int64 price = 3;
}

message Order {
  string id = 1;
  string customer_id = 2;
  repeated OrderItem items = 3;
  int64 total_price = 4;
  string status = 5;
  string created_at = 6;
  string updated_at = 7;
}

message CreateOrderRequest {
  string customer_id = 1;
  repeated OrderItem items = 2;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message UpdateOrderRequest {
  string id = 1;
  string status = 2;
}

message UpdateOrderResponse {
  Order order = 1;
}